--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <div class="level-monitor">
     <div class="indicator"></div>
 </div>
+<div class="percent"></div>
 
 <script src="main.js"></script>
